# rasm

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  testsuite
examples/: alloc.wasm  alloc.wat  block.wast  block.wat  br_table_large.wasm  call.wast  fact.wasm  fact.wat  fib_bench.wasm  fib_bench.wat  gol.wasm  large_func.wasm  large_func.wat  loop1.wasm  loop2.wasm  loop3.wasm  mem_check.wasm  mem_check.wat  simple_br.wasm  small_test.wasm  small_test.wat  sum_call.wasm  sum_call.wat  sum_easy.wasm  sum_easy.wat  sum_hard.wasm  sum_hard.wat  weird_alloc.wasm  weird_alloc.wat
rasm/: LICENSE
rasm/src/: lib.rs
src/: lib.rs
src/execution/: frame.rs  module.rs
src/lexer/: lexer.rs
src/parser/: binary.rs  error.rs  mod.rs  parser.rs  type.rs
src/types/: env.rs  mod.rs  (+8 more)
wabi/: Cargo.toml  structure.md
wabi/benches/: fib.rs
wabi/examples/: add_weird.wasm  is_one.wasm  is_one.wat  sum.wasm
wabi/src/: error.rs  function.rs  index.rs  instr.rs  lib.rs  module.rs  types.rs
wabi/src/module/: mod.rs
wabi/src/runtime/: frame.rs  interpreter.rs  mod.rs  module_instance.rs  resolver.rs  runtime.rs  runtime_store.rs
wabi/src/store/: error.rs  global.rs  memory.rs  store.rs
wabi/tests/: test_files.rs
wasamere/: Cargo.toml
wasamere-derive/: Cargo.toml
wasamere-derive/src/: lib.rs
wasamere-parse/: Cargo.toml
wasm-nom/: Cargo.toml
wasm-nom/examples/: gol.wat
wasm-nom/src/: instr.rs  macros.rs
wasm-nom/src/section/: export.rs  import.rs  section.rs
wasm-nom/src/types/: mod.rs
yawr/: Cargo.toml
yawr/benches/: fib.rs
yawr/examples/: add_weird.wat  sum.wat
yawr/src/: error.rs  function.rs  instr.rs  lib.rs  macros.rs  math.rs  module.rs  store.rs  store_old.rs  types.rs  value.rs
yawr/src/runtime/: frame.rs  interpreter.rs  mod.rs  runtime.rs
yawr/src/store/: global.rs  memory.rs  mod.rs  store.rs  table.rs
yawr/tests/: test_files.rs
(+52 files in other folders)
