[package]
name = "wabi"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
wasm_nom = { path = "../wasm-nom" }
failure = "*"
env_logger = "*"
log = "*"
clap = "*"
structopt = "*"
byteorder = "*"
wabt = "*"
colored = "1.8"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "fib"
harness = false