[package]
name = "wasamere-derive"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# [[bin]]
# name = "main"
# path = "./src/main.rs"

[dependencies]
nom = "*"
syn = { version = "*", features = ["derive"] }
quote = "*"
proc-macro2 = "*"