[package]
name = "wasm_nom"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "*"
log = "*"
nom = "4.2.3"
failure = "*"
structnom = { path = "../../structnom/" }
