[package]
name = "yawr"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"

[dependencies]
wasamere = { path = "../wasamere" }
failure = "*"
env_logger = "*"
log = "*"
clap = "*"
structopt = "*"
byteorder = "*"
wabt = "*"
colored = "1.8"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "fib"
harness = false